[gd_scene load_steps=7 format=3 uid="uid://jcgywu5x2b7s"]

[ext_resource type="FontFile" uid="uid://be3fpfdl1qoi7" path="res://Minecraft.ttf" id="1_5u4io"]
[ext_resource type="Script" uid="uid://box75gmno3hex" path="res://scenes/tasks.gd" id="1_820ab"]
[ext_resource type="Texture2D" uid="uid://dnfecn0iutp53" path="res://assets/images/monitor_screen.png" id="3_fbbsq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gwg68"]
bg_color = Color(0.0935632, 0.111928, 0.14563, 1)

[sub_resource type="LabelSettings" id="LabelSettings_820ab"]
font = ExtResource("1_5u4io")
font_size = 50

[sub_resource type="Theme" id="Theme_fbbsq"]

[node name="task" type="Node2D"]
script = ExtResource("1_820ab")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -1284.0
offset_top = -999.0
offset_right = 1772.0
offset_bottom = 1303.0
texture = ExtResource("3_fbbsq")

[node name="Panel" type="Panel" parent="."]
offset_left = 237.0
offset_top = 252.0
offset_right = 937.0
offset_bottom = 617.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gwg68")

[node name="TaskLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -248.0
offset_top = 28.0
offset_right = 248.0
offset_bottom = 79.0
grow_horizontal = 2
text = "New task"
label_settings = SubResource("LabelSettings_820ab")
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 171

[node name="QuestionLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -317.0
offset_top = -81.0
offset_right = 317.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
tab_size = 3
horizontal_alignment = 1

[node name="AnswerInput" type="LineEdit" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.5
offset_top = 5.0
offset_right = 285.5
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubmitButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = 64.0
offset_right = 100.5
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fbbsq")
text = "SUBMIT"

[node name="FeedbackLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 253.0
offset_top = 305.0
offset_right = 468.0
offset_bottom = 328.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 512)
